# jambler-simulation

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  cli.yml  jambler-simulation.bash  rust-toolchain.toml
completions/: _jambler-simulation  _jambler-simulation.ps1  jambler-simulation.bash  jambler-simulation.elv  jambler-simulation.fish
src/: cli.rs  csa2.rs  main.rs  tasks.rs
src/tasks/: channel_occurence.rs  channel_occurrence.rs  channel_recovery.rs  conn_interval.rs  full.rs
